--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -23,6 +23,13 @@
     }
 }
 
+.site-byline {
+    font-size: 16px;
+	clear: left;
+    color: $grey-color-dark;
+	margin-left: 15px;
+}
+
 .site-nav {
     float: right;
     line-height: 56px;
