--- a/css/frontpage.css
+++ b/css/frontpage.css
@@ -1,8 +1,11 @@
-/*!
- * Start Bootstrap - Business Frontpage HTML Template (http://startbootstrap.com)
- * Code licensed under the Apache License v2.0.
- * For details, see http://www.apache.org/licenses/LICENSE-2.0.
- */
+@font-face{
+	font-family: "Lato";
+	src: url('webfont.eot'); /* IE9 Compat Modes */
+	src: url('../fonts/Lato/lato-regular-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+     	 url('../fonts/Lato/lato-regular-webfont.woff') format('woff'), /* Modern Browsers */
+	 	 url('../fonts/Lato/Lato-Regular.ttf')  format('truetype'), /* Safari, Android, iOS */
+	 	 url('../fonts/Lato/lato-regular-webfont.svg#svgLato') format('svg'); /* Legacy iOS */
+}
 
 body {
     padding-top: 50px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
@@ -34,6 +37,9 @@ body {
     margin: 0;
     text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
     font-size: 5em;
+    font-family: Lato;
+    text-transform: uppercase;
+    font-weight: 900;
 }
 
 .intro-divider {
@@ -44,6 +50,8 @@ body {
 
 .intro-message > h3 {
     text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+    font-family: Lato;
+    font-weight: 900;
 }
 
 @media(max-width:767px) {
