--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,12 +5,11 @@
 
   <body>
 
+    {% include nav.html %}
     {% include header.html %}
 
     <div class="page-content">
-      <div class="wrapper">
         {{ content }}
-      </div>
     </div>
 
     {% include footer.html %}
