--- a/css/custom.css
+++ b/css/custom.css
@@ -29,7 +29,7 @@ body {
 
 .intro-message {
     position: relative;
-    padding-top: 20%;
+    padding-top: 15%;
     padding-bottom: 20%;
 }
 
@@ -52,6 +52,15 @@ body {
     text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
     font-family: Lato;
     font-weight: 900;
+}
+
+.space-above{
+	margin-top: 40px;
+}
+
+.intro-message .btn{
+	text-transform: uppercase;
+	padding: 20px 30px;
 }
 
 @media(max-width:767px) {
@@ -92,4 +101,20 @@ body {
 
 footer {
     margin: 50px 0;
+}
+
+/* Navbar */
+
+.navbar-default .navbar-nav>li>a{
+	font-family: Lato;
+	font-weight: bold;
+	text-transform: uppercase;
+	font-size: 1.1em;
+}
+
+
+/*** Bootstrap Theming ****/
+.btn-primary{
+	background-color: #4E9DD6;
+	border-color: #4E9DD6;
 }
