--- a/css/custom.css
+++ b/css/custom.css
@@ -11,6 +11,10 @@ body {
     padding-top: 50px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
 
+.center{ 
+	text-align: center;
+}
+
 /* Header Image Background - Change the URL below to your image path (example: ../images/background.jpg) */
 
 .intro-header {
